<resources>
    <string name="app_name">Mini Go</string>
    <string name="go_to">Go to</string>
    <string name="jouer">jouer</string>
    <string name="score">Score :</string>
    <string name="_0">0</string>
    <string name="score_0">Score : 0</string>
    <string name="logo">logo</string>
    <string name="play">play</string>
    <string name="game_inspired_by_number_connect">Game inspired by Number connect</string>
    <string name="oops">oops</string>
    <string name="game">game</string>
    <string name="over">over</string>
    <string name="replay">Replay</string>
    <string name="home">Home</string>
    <string name="instructions">Instructions</string>
    <string name="create_a_group_of_4_same_boxes_to_upgrade_and_finish_by_the_last_one_the_france">Create a group of 4 same boxes to upgrade and finish by the last one : the France.</string>
    <string name="imageinstru3">imageinstru3</string>
    <string name="imageinstru2">imageinstru2</string>
    <string name="imageinstru1">imageinstru1</string>
    <string name="retour">Retour</string>
</resources>
