<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/image_fond"
    tools:context="fr.iutlens.mmi.buildthefrance.AccueilActivity">

    <android.support.design.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="247dp"
        android:layout_height="78dp"
        android:layout_marginBottom="8dp"
        android:background="#D6D8D7"
        android:fontFamily="@font/lemondropf"
        android:text="@string/play"
        android:textAllCaps="true"
        android:textSize="25sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/buttoninstruc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/gravityf"
        android:text="@string/game_inspired_by_number_connect"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/marge_image"
        android:layout_marginStart="@dimen/marge_image"
        android:layout_marginLeft="@dimen/marge_image"
        android:layout_marginRight="@dimen/marge_image"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@mipmap/logo" />

    <android.support.design.button.MaterialButton
        android:id="@+id/buttoninstruc"
        android:layout_width="247dp"
        android:layout_height="78dp"
        android:layout_marginBottom="@dimen/marginButtonInstru"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="#D6D8D7"
        android:fontFamily="@font/lemondropf"
        android:text="@string/instructions"
        android:textAllCaps="true"
        android:textSize="22sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</android.support.constraint.ConstraintLayout>
